feat: adds doc to find user by id
