# docs/swagger.yaml
@@ -106,6 +106,10 @@ paths:
       responses:
         "200":
           description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/errors.Error'
         "500":
           description: Internal Server Error
           schema:
@@ -113,6 +117,33 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Find user by email
+      tags:
+      - users
+  /user/findById/{id}:
+    get:
+      description: Find user by id
+      parameters:
+      - description: the id of the user
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/errors.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/errors.Error'
+      security:
+      - ApiKeyAuth: []
+      summary: Find user by id
       tags:
       - users
 securityDefinitions:
